[gd_scene load_steps=11 format=2]

[ext_resource path="res://Prefabs/SlimeEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/industrial.v2.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/Sprite.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/TakeDamageStateMachine.gd" type="Script" id=4]
[ext_resource path="res://Scripts/SlimeEnemyState.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float time_factor = 18.0;
uniform float time_running = 0;
uniform bool on = false;
uniform vec4 flash_color = vec4(0.2, 0.1, 0.2, 1);

uniform vec2 scale_up = vec2(0.2, 0.1);

void fragment () {
	vec4 color = texture(TEXTURE, UV);
	if (on) {
		vec4 difference = abs(cos(time_factor*TIME)) * (flash_color - color);
		vec4 finalColor = color + difference;
		COLOR = vec4(finalColor.r, finalColor.g, finalColor.b, color.a);
	} else {
		COLOR = color;
	}
}

void vertex () {
	if (on) {
		vec2 scale = vec2(1) + abs(sin((time_factor/0.7) * TIME)) * scale_up;
		VERTEX = (EXTRA_MATRIX * vec4((VERTEX * scale), 0, 0)).xy;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/time_factor = 10.0
shader_param/time_running = 0.0
shader_param/on = false
shader_param/flash_color = Plane( 0.5, 0.5, 0.5, 0 )
shader_param/scale_up = Vector2( 0.2, 0.05 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.75583
height = 7.56635

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.60114
height = 4.13293

[sub_resource type="Animation" id=5]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[node name="Enemy1" type="KinematicBody2D"]
position = Vector2( 288, 464 )
collision_layer = 16
collision_mask = 72
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 7.97205, -8 )
texture = ExtResource( 2 )
hframes = 7
region_enabled = true
region_rect = Rect2( 0, 416, 112, 16 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.97205, -5.53479 )
shape = SubResource( 3 )

[node name="Hit " type="Area2D" parent="."]
collision_layer = 18
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit "]
position = Vector2( 8.00638, -6.60928 )
shape = SubResource( 4 )

[node name="TakeDamageState" type="Node" parent="."]
script = ExtResource( 4 )
time_of_no_damage = 0.15

[node name="EnemyState" type="Node" parent="."]
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slime = SubResource( 5 )

[node name="SpikeArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SpikeArea2D"]
position = Vector2( 8.00638, -6.60928 )
shape = SubResource( 4 )
[connection signal="area_entered" from="Hit " to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Hit " to="." method="_on_Area2D_body_entered"]
[connection signal="died" from="TakeDamageState" to="." method="_on_TakeDamageState_died"]
[connection signal="got_hit" from="TakeDamageState" to="Sprite" method="_on_TakeDamageState_got_hit"]
[connection signal="got_hit" from="TakeDamageState" to="EnemyState" method="_on_TakeDamageState_got_hit"]
[connection signal="recovered_hit" from="TakeDamageState" to="Sprite" method="_on_TakeDamageState_recovered_hit"]
[connection signal="body_entered" from="SpikeArea2D" to="." method="_on_SpikeArea2D_body_entered"]
